<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical">

    <!--toolbar -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_background"
        app:title="SINGLE NATIONAL CURRICULUM"
        app:titleTextColor="#fff" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/myToolbar"
        android:layout_marginTop="30dp"
        android:fillViewport="true">


        <GridLayout
            android:id="@+id/Grid_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:paddingBottom="8dp"
            android:rowCount="2">


            <!-- Card view for Class 1st -->

            <androidx.cardview.widget.CardView
                android:id="@+id/cardFirstClass"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/img_english_3rd"
                        android:layout_width="match_parent"
                        android:layout_height="167dp"
                        android:src="@drawable/class1st" />

                    <TextView
                        android:id="@+id/tv_english_3rd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/class_1st"
                        android:textColor="@color/subject_title_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card view for Class 2nd -->

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSecondClass"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/img_maths_3rd"
                        android:layout_width="match_parent"
                        android:layout_height="167dp"
                        android:src="@drawable/class2nd" />

                    <TextView
                        android:id="@+id/tv_maths_3rd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="3dp"
                        android:shadowRadius="8"
                        android:text="@string/class_2nd"
                        android:textColor="@color/subject_title_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Card view for Class 3rd -->

            <androidx.cardview.widget.CardView
                android:id="@+id/cardThirdClass"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"

                android:layout_marginTop="25dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/img_science_3rd"
                        android:layout_width="match_parent"
                        android:layout_height="167dp"
                        android:src="@drawable/class3rd" />

                    <TextView
                        android:id="@+id/tv_science_3rd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/class_3rd"
                        android:textColor="@color/subject_title_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Card view for Class 4th -->

            <androidx.cardview.widget.CardView
                android:id="@+id/cardFourthClass"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/img_urdu_3rd"
                        android:layout_width="match_parent"
                        android:layout_height="167dp"
                        android:src="@drawable/class4th" />

                    <TextView


                        android:id="@+id/tv_urdu_3rd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/class_4th"
                        android:textColor="@color/subject_title_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardFifthClass"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/img_urdu_5th"
                        android:layout_width="match_parent"
                        android:layout_height="167dp"
                        android:src="@drawable/class5th" />

                    <TextView


                        android:id="@+id/tv_urdu_5th"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/class_5th"
                        android:textColor="@color/subject_title_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:id="@+id/cardsixthClass"

                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/img_urdu_6th"
                        android:layout_width="match_parent"
                        android:layout_height="173dp"
                        android:src="@drawable/class6th" />

                    <TextView


                        android:id="@+id/tv_urdu_6th"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/class_6th"
                        android:textColor="@color/subject_title_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>

    </ScrollView>

</RelativeLayout>